load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_apple//apple:macos.bzl", "macos_application")
load("@rules_apple//apple:versioning.bzl", "apple_bundle_version")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")
load("@rules_dart//dart:defs.bzl", "dart_test")
load("@rules_flutter//flutter:defs.bzl", "flutter_application")
load(
    "@rules_flutter//flutter:ios.bzl",
    "IOS_DEFAULT_LAUNCH_STORYBOARD",
    "IOS_MINIMUM_OS_VERSION",
    "flutter_ios_engine",
    "flutter_ios_framework_gen",
    "flutter_ios_info_plist_gen",
    "flutter_ios_native_frameworks_gen",
    "flutter_ios_registrant_gen",
    "flutter_ios_runner_lib_gen",
)
load("@rules_flutter//flutter:linux.bzl", "flutter_linux_app")
load(
    "@rules_flutter//flutter:macos.bzl",
    "MACOS_MINIMUM_OS_VERSION",
    "flutter_macos_engine",
    "flutter_macos_framework_gen",
    "flutter_macos_info_plist_gen",
    "flutter_macos_menu_xib_gen",
    "flutter_macos_native_libs_gen",
    "flutter_macos_registrant_gen",
    "flutter_macos_runner_lib_gen",
)

exports_files(["pubspec.lock"])

cc_library(
    name = "multiply_cc",
    srcs = ["native/multiply.c"],
    hdrs = ["native/multiply.h"],
    # Visible to the optional, git-ignored //device package (signed iOS).
    visibility = ["//device:__pkg__"],
    # alwayslink ensures the linker keeps symbols even when only
    # referenced via dart:ffi (no static ObjC/Swift references).
    alwayslink = True,
)

cc_shared_library(
    name = "multiply",
    visibility = ["//multiply_plugin:__pkg__"],
    deps = [":multiply_cc"],
)

flutter_application(
    name = "ffi_plugin_app",
    package_name = "ffi_plugin_example",
    main = "lib/main.dart",
    # Visible to the optional, git-ignored //device package for on-device
    # (signed) iOS builds. See device.example/.
    visibility = ["//device:__pkg__"],
    deps = [
        "//multiply_plugin",
        "@deps//:flutter",
        "@rules_flutter//flutter:material_icons",
    ],
)

# =============================================================================
# macOS build
# =============================================================================

flutter_macos_framework_gen(
    name = "ffi_plugin_macos_framework",
    application = ":ffi_plugin_app",
)

flutter_macos_registrant_gen(
    name = "ffi_plugin_macos_registrant",
    application = ":ffi_plugin_app",
)

flutter_macos_native_libs_gen(
    name = "ffi_plugin_macos_native_libs",
    application = ":ffi_plugin_app",
)

flutter_macos_engine(
    name = "flutter_engine",
)

flutter_macos_info_plist_gen(
    name = "ffi_plugin_macos_info_plist",
    app_name = "FFI Plugin Example",
)

flutter_macos_menu_xib_gen(
    name = "runner_menu_xib",
    app_name = "FFI Plugin Example",
)

flutter_macos_runner_lib_gen(
    name = "runner_lib",
    engine = ":flutter_engine",
    registrant = ":ffi_plugin_macos_registrant",
)

apple_bundle_version(
    name = "ffi_plugin_macos_version",
    build_version = "1.0",
    short_version_string = "1.0",
    tags = ["manual"],
)

macos_application(
    name = "ffi_plugin_macos",
    additional_contents = {
        ":ffi_plugin_macos_framework": "Frameworks",
        ":ffi_plugin_macos_native_libs": "Frameworks",
    },
    bundle_id = "com.example.ffiplugin",
    infoplists = [":ffi_plugin_macos_info_plist"],
    minimum_os_version = MACOS_MINIMUM_OS_VERSION,
    resources = [":runner_menu_xib"],
    tags = ["manual"],
    version = ":ffi_plugin_macos_version",
    deps = [":runner_lib"],
)

# =============================================================================
# iOS build — FFI plugin with native code statically linked.
# On iOS, native plugin code is statically linked into the app binary
# (unlike macOS/Linux where it's a separate .dylib in Frameworks/).
# The Dart FFI code uses DynamicLibrary.process() to find the symbols.
# =============================================================================

flutter_ios_framework_gen(
    name = "ffi_plugin_ios_framework",
    application = ":ffi_plugin_app",
)

flutter_ios_registrant_gen(
    name = "ffi_plugin_ios_registrant",
    application = ":ffi_plugin_app",
)

flutter_ios_engine(
    name = "ffi_plugin_ios_engine",
)

flutter_ios_native_frameworks_gen(
    name = "ffi_plugin_ios_native_frameworks",
    application = ":ffi_plugin_app",
)

flutter_ios_info_plist_gen(
    name = "ios_runner_info_plist",
    app_name = "FFI Plugin Example",
)

flutter_ios_runner_lib_gen(
    name = "ios_runner_lib",
    engine = ":ffi_plugin_ios_engine",
    registrant = ":ffi_plugin_ios_registrant",
)

apple_bundle_version(
    name = "ffi_plugin_ios_version",
    build_version = "1.0",
    short_version_string = "1.0",
    tags = ["manual"],
)

ios_application(
    name = "ffi_plugin_ios",
    bundle_id = "com.example.ffiplugin",
    families = ["iphone"],
    infoplists = [":ios_runner_info_plist"],
    launch_storyboard = IOS_DEFAULT_LAUNCH_STORYBOARD,
    minimum_os_version = IOS_MINIMUM_OS_VERSION,
    tags = ["manual"],
    version = ":ffi_plugin_ios_version",
    deps = [
        ":ffi_plugin_ios_framework",
        ":ios_runner_lib",
        ":multiply_cc",
    ],
)

# =============================================================================
# Linux build
# =============================================================================

flutter_linux_app(
    name = "ffi_plugin_linux",
    application = ":ffi_plugin_app",
    target_compatible_with = ["@platforms//os:linux"],
)

# =============================================================================
# Tests
# =============================================================================

dart_test(
    name = "verify_macos_bundle_test",
    data = [":ffi_plugin_macos"],
    main = "test/verify_macos_bundle_test.dart",
    target_compatible_with = ["@platforms//os:macos"],
)

dart_test(
    name = "verify_linux_bundle_test",
    data = [":ffi_plugin_linux"],
    main = "test/verify_linux_bundle_test.dart",
    target_compatible_with = ["@platforms//os:linux"],
)

build_test(
    name = "ffi_plugin_build_test",
    targets = [
        ":ffi_plugin_app",
        ":multiply",
        "//multiply_plugin",
    ],
)

build_test(
    name = "macos_bundle_build_test",
    target_compatible_with = ["@platforms//os:macos"],
    targets = [":ffi_plugin_macos"],
)

build_test(
    name = "ios_bundle_build_test",
    target_compatible_with = ["@platforms//os:macos"],
    targets = [":ffi_plugin_ios"],
)

build_test(
    name = "linux_bundle_build_test",
    target_compatible_with = ["@platforms//os:linux"],
    targets = [":ffi_plugin_linux"],
)
