"E2e test: Flutter plugin with both dart_plugin_class and native_deps"

module(name = "rules_flutter_ffi_plugin_example")

bazel_dep(name = "rules_flutter", version = "0.0.0")
bazel_dep(name = "rules_dart", version = "0.4.3")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "apple_support", version = "2.5.4")
bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "platforms", version = "1.0.0")

local_path_override(
    module_name = "rules_flutter",
    path = "../..",
)

flutter = use_extension("@rules_flutter//flutter:extensions.bzl", "flutter")
flutter.toolchain(flutter_version = "3.44.1")
flutter.pub(
    name = "deps",
    lock = "//:pubspec.lock",
)
use_repo(flutter, "deps", "flutter_ios_engine", "flutter_ios_engine_debug", "flutter_macos_engine", "flutter_toolchains")

register_toolchains("@flutter_toolchains//:all")
