load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_dart//dart:defs.bzl", "dart_test")
load("@rules_flutter//flutter:defs.bzl", "flutter_application")
load(
    "@rules_flutter//flutter:linux.bzl",
    "flutter_linux_app",
    "flutter_linux_bundle",
    "flutter_linux_engine",
    "flutter_linux_registrant_gen",
    "flutter_linux_runner_lib_gen",
)

exports_files(["pubspec.lock"])

flutter_application(
    name = "app_flutter",
    package_name = "linux_example",
    main = "lib/main.dart",
    deps = [
        "@deps//:flutter",
        "@rules_flutter//flutter:material_icons",
    ],
)

# =============================================================================
# Shared Tier 2 targets (used by approaches 2 & 3)
# =============================================================================

flutter_linux_engine(name = "flutter_engine")

flutter_linux_registrant_gen(
    name = "app_registrant",
    application = ":app_flutter",
)

# =============================================================================
# Approach 1: Flutter-generated runner (flutter_linux_app)
#
# Recommended for most users. Requires linux/runner/ from `flutter create`.
# The macro auto-discovers C++ runner files, uses the flutter create
# registrant, and assembles the bundle automatically.
# =============================================================================

flutter_linux_app(
    name = "app",
    application = ":app_flutter",
    gtk_app_id = "com.example.linuxexample",
    target_compatible_with = ["@platforms//os:linux"],
)

# =============================================================================
# Approach 2: Bazel-generated runner (flutter_linux_runner_lib_gen)
#
# For users without `flutter create` output. Uses template runner from
# rules_flutter. No C++ code needed. User wires runner + bundle manually.
# =============================================================================

flutter_linux_runner_lib_gen(
    name = "bazel_runner",
    engine = ":flutter_engine",
    gtk_app_id = "com.example.linuxexample",
    registrant = ":app_registrant",
)

flutter_linux_bundle(
    name = "app_bazel_runner",
    application = ":app_flutter",
    runner = ":bazel_runner",
    tags = ["manual"],
)

# =============================================================================
# Tests
# =============================================================================

build_test(
    name = "linux_app_build_test",
    target_compatible_with = ["@platforms//os:linux"],
    targets = [":app"],
)

build_test(
    name = "linux_bazel_runner_build_test",
    target_compatible_with = ["@platforms//os:linux"],
    targets = [":app_bazel_runner"],
)

dart_test(
    name = "verify_linux_bundle_test",
    data = [":app"],
    main = "test/verify_linux_bundle_test.dart",
    target_compatible_with = ["@platforms//os:linux"],
)
